--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,6 @@ services:
   traefik:
     container_name: traefik
     image: traefik
-    networks:
-      - traefik
     ports:
       - "80:80"
       - "9090:8080"
@@ -22,8 +20,6 @@ services:
   jenkins:
      container_name: jenkins
      image: treeptik/jenkins
-     networks:
-       - traefik
      volumes:
        - /var/run/docker.sock:/var/run/docker.sock
        - jenkins-home:/var/jenkins_home
@@ -38,9 +34,8 @@ services:
        - "traefik.frontend.entryPoints=http"
 
   gitlab:
+    container_name: gitlab
     image: gitlab/gitlab-ce:10.2.1-ce.0
-    networks:
-      - traefik
     hostname: 'gitlab.${HOSTNAME}'
     restart: unless-stopped
     volumes:
@@ -53,11 +48,13 @@ services:
       - "traefik.backend=gitlab"
       - "traefik.frontend.entryPoints=http"
 
-networks:
-  traefik:
-
 volumes:
   jenkins-home:
   gitlab-conf:
   gitlab-data:
   gitlab-log:
+
+networks:
+  default:
+    external:
+      name: skynet
